--- a/style.css
+++ b/style.css
@@ -15,39 +15,36 @@ body{
     
 }
 .textos{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding-top: 30px;
-    padding-left: 110px;
-    gap: 95px;
+    padding-left: 400px;
+    
+    gap: 190px;
+    align-items: center;
     color: white;
 }
-.logo{
+#logo1{
 position:absolute;
+width: 130px;
 
 }
 
-.roxo{
+#roxo2{
     position: absolute;
-
-    height: 734px;
-    left: 540px;
-    top: 84px;
+    height: 690px;
+    left: 38%;
 }
-.copos{
+#copos1{
     position: absolute;
-
-    height: 734px;
-    left: 560px;
+    height: 720px;
+    left: 590px;
     top: 85px;
 }
 .tomou{
-    position: absolute;
+position: absolute;
 width: 52px;
 height: 323px;
 left: 85px;
-top: 180px;
+top: 290px;
 
 font-family: 'Lemon';
 font-style: normal;
@@ -57,11 +54,9 @@ color: #FFFF00;
 }
 .acai{
     position: absolute;
-width: 1136px;
 height: 237px;
 left: 121px;
-top: 400px;
-
+top: 500px;
 font-family: 'Lemon';
 font-style: normal;
 font-weight: 400;
@@ -82,7 +77,7 @@ top: 85px;
     }
     body{
         height: 100vh;
-        width: 100vw;
+        width: 100%;
         background-image: url(fundo.png);
         background-size: cover;
         overflow: hidden;
@@ -94,55 +89,48 @@ top: 85px;
     .textos{
         display: flex;
         justify-content: center;
-        align-items: center;
         padding-top: 30px;
-        padding-left: px;
-        gap: 95px;
+        left: 800px;
+        gap: 35px;
         color: white;
     }
-    .logo{
+    #logo1{
     position:absolute;
-    width: 10px;
+    width: 250px;
     }
     
-    .roxo{
+    #roxo2{
         position: absolute;
-    
-        height: 734px;
-        left: 540px;
-        top: 84px;
+        height: 1004px;
+        left: 20px;
+        top: 200px;
     }
-    .copos{
+    #copos1{
         position: absolute;
-    
-        height: 734px;
-        left: 560px;
-        top: 85px;
+        height: 804px;
+        left: 160px;
+        top: 295px;
     }
     .tomou{
-        position: absolute;
-    width: 52px;
-    height: 323px;
+    position: absolute;
     left: 85px;
-    top: 180px;
-    
+    top: 1000px;
     font-family: 'Lemon';
     font-style: normal;
     font-weight: 600;
-    font-size: 80px;
+    font-size: 130px;
     color: #FFFF00;
     }
     .acai{
-        position: absolute;
+    position: absolute;
     width: 1136px;
     height: 237px;
     left: 121px;
-    top: 400px;
-    
+    top: 1350px;
     font-family: 'Lemon';
     font-style: normal;
     font-weight: 400;
-    font-size: 45px;
+    font-size: 70px;
     color: #FFFFFF;
     }
     .linha{
